multiple minor issue fixes
- fixed issue with duplicate selenium.version properties forcing selenium to use an older version
- handled the new org.openqa.selenium.bidi.BiDiException: Unable to create a BiDi connection for navigation on non bidi-compliant drivers (like chrome)
- ensured configuration methods are always enabled and do not inherit any group configurations
- removed unsupported log types (client, server, profiler)
- attempting to use SELENIUM MANAGER for LOCAL CHROME INSTANCE only. it now supports proxy configuration, so we should slowly replace all local instances to use selenium manager rather than webdriver manager.
- rerouting driver logs to console and setting log level to warning
- rolling back allure version to "2.21.0" NOT TO BE UPGRADED! (causes issue whereby suite setup, suite teardown, and some attachment types are not working)
- rolling back aspecj weaver version to "1.9.7" NOT TO BE UPGRADED!
- adding extra argline to improve aspectj weaver accessibility

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>