@@ -34,12 +34,11 @@
     <properties>
         <!-- Dependencies and Plug-ins Version Numbers Parameters -->
         <selenium.version>4.10.0</selenium.version>
-        <selenium.version>4.9.0</selenium.version>
         <appium-java-client.version>8.5.1</appium-java-client.version>
         <webdrivermanager.version>5.3.3</webdrivermanager.version>
-        <allure-testng.version>2.22.2</allure-testng.version> <!-- UPDATE internal.properties -->
+        <allure-testng.version>2.21.0</allure-testng.version> <!-- 2.21.0 DO NOT UPDATE || internal.properties -->
         <extentreports.version>5.0.9</extentreports.version>
-        <aspectj.version>1.9.19</aspectj.version> <!-- 1.9.7 DO NOT UPDATE -->
+        <aspectj.version>1.9.7</aspectj.version> <!-- 1.9.7 DO NOT UPDATE -->
         <rest-assured.version>5.3.1</rest-assured.version>
         <json-simple.version>1.1.1</json-simple.version>
         <json-path.version>2.8.0</json-path.version>
@@ -72,6 +71,7 @@
         <org.yaml.version>2.0</org.yaml.version>
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <argLine>
+            --add-opens java.base/java.time=ALL-UNNAMED
             -javaagent:${user.home}/.m2/repository/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
         </argLine>
 
@@ -777,6 +777,7 @@
                     <classesDirectory>target/classes</classesDirectory>
                     <archive>
                         <manifest>
+                            <Add-Opens>java.base/java.lang=ALL-UNNAMED</Add-Opens>
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
